applications/monitoring/grafana/grafana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring-loki-stack
  annotations:
spec:
  tls:
  - hosts:
      - grafana.jlh.name
    secretName: grafana-jlh-name-tls
  rules:
  - host: grafana.jlh.name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki-stack-grafana
            port:
              number: 80
